# ffmpeg-cmake-cpp

./: CMakeLists.txt  README.md  README.org
Modules/: FindFFMPEG.cmake
src/: main.cpp
